#src/scss/style.scss
/* ... */
.map-container {
	width: calc(100vw - 15px);
	height: 100%;
	left: 50%;
	transform: translateX(-50%);
	position: absolute;
	@include r(768px) {
		height: 420px;
		width: 100%;
		position: static;
	}
}
.map-info {
	display: flex;
	flex-direction: column;
	gap: 40px;
	align-items: flex-start;
	border-radius: 24px;
	margin-top: auto;
	background: #fff;
	margin-right: auto;
	padding: 32px 40px;
	max-width: 440px;
	width: 100%;
	position: absolute;
	bottom: 100px;
	z-index: 1;
	&__column {
		display: flex;
		flex-direction: column;
		gap: 16px;
	}
	&__title {
		@extend .h2;
	}
	@include r(768px) {
		margin-bottom: 0;
		max-width: 100%;
		padding: 16px;
		gap: 24px;
	}
}

// HERO
.hero {
	padding: 16px 0px;
	overflow: hidden;
	position: relative;
	.swiper__wrapper {
		height: 668px;
		min-height: 668px;
		max-height: 668px;
	}
	@include r(768px) {
		.swiper__wrapper {
			height: 640px;
			min-height: 640px;
			max-height: 640px;
		}
	}
}
.hero-swiper {
	overflow: visible;
	height: 640px;
	min-height: 640px;
	max-height: 640px;
	&__video {
		width: 100%;
		height: 100%;
		object-fit: cover;
		border-radius: 24px;
		overflow: hidden;
	}
	&__img{
		width: 100%;
		height: 100%;
		object-fit: cover;
		border-radius: 24px;
		overflow: hidden;
	}
	@include r(768px) {
		height: 620px;
		min-height: 620px;
		max-height: 620px;
		.swiper-pagination {
			margin-top: 16px;
		}
	}
}
.hero-content {
	position: absolute;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
	padding: 16px 0px;
	z-index: 2;
	.container {
		height: 100%;
	}
	&__container {
		padding: 32px 32px 60px;
		height: 100%;
		display: flex;
		justify-content: space-between;
		align-items: flex-end;
		gap: 32px;
	}
	&__column {
		display: flex;
		flex-direction: column;
		gap: 12px;
	}
	&__navigation {
		display: flex;
		align-items: center;
		gap: 8px;
	}
	&__reviews {
		display: flex;
		flex-direction: column;
		gap: 8px;
		.footer-bottom-card {
			margin: 0;
		}
	}
	&__card {
		display: flex;
		flex-direction: column;
		padding: 24px;
		border-radius: 24px;
		background: #fff;
		height: 100%;
	}
	&__tags {
		display: flex;
		gap: 2px;
		align-items: center;
		flex-wrap: wrap;
	}
	&__tag {
		display: flex;
		padding: 4px 12px;
		justify-content: center;
		align-items: center;
		gap: 8px;
		border-radius: 100px;
		background: #211E2E;
		white-space: nowrap;
		color: #E7E3F2;
		font-size: 14px;
		font-style: normal;
		font-weight: 500;
		line-height: 120%; /* 16.8px */
	}
	&__info {
		padding: 8px 16px 8px 12px;
		border-radius: 16px;
		display: inline-flex;
		width: auto;
		margin-right: auto;
		gap: 8px;
		align-items: center;
		justify-content: center;
		background: #F5F4F7;
		color: var(--PURPLE-200);
		font-size: 12px;
		font-style: normal;
		font-weight: 700;
		line-height: 120%;
		letter-spacing: 0.84px;
		text-transform: uppercase;
		img {
			min-width: 24px;
			margin-bottom: auto;
		}
		@include r(768px) {
			text-align: left;
		}
	}
	&__text {
		@extend .text-large, .text-large--light;
		margin-top: 16px;
	}
	&__title {
		@extend .h1;
		margin-top: 8px;
	}
	&__button {
		margin-top: 32px;
		margin-right: auto;
	}
	&__close {
		width: 56px;
		height: 36px;
		margin-left: auto;
		display: none;
		align-items: center;
		justify-content: center;
		background: #fff;
		border-radius: 100px;
	}
	@include r(768px) {
		display: contents;
		&__close {
			display: flex;
			svg {
				transition: .3s ease;
				transform: rotate(180deg);
			}
		}
		&__card-wrapper {
			display: grid;
			grid-template-rows: 0fr;
			transition: .3s ease;
		}
		.container {
			display: contents;
		}
		&__container {
			display: contents;
		}
		&__reviews {
			order: 100;
			margin-top: 28px;
			flex-direction: row;
			overflow: auto;
			margin: 28px -16px 0;
			padding: 0px 16px;
			width: calc(100% + 32px);
			.footer-bottom-card {
				min-width: 320px;
			}
		}
		&__column {
			position: absolute;
			z-index: 10;
			bottom: 160px;
			left: 32px;
			gap: 0;
			max-width: calc(100vw - 64px);
		}
		&__card {
			padding: 0 16px;
			height: 100%;
			overflow: hidden;
			transition: .3s ease;
		}
		&__button {
			margin-top: 16px;
		}
		&__text {
			margin-top: 16px;
		}
		&.active & {
			&__card-wrapper {
				grid-template-rows: 1fr;
				margin-top: 12px;
			}
			&__card {
				padding: 16px;
			}
			&__close {
				svg {
					transform: rotate(0);
				}
			}
		}
	}
}
.hero-card-swiper {
	max-width: 660px;
	width: 100%;
	border-radius: 24px;
	.swiper-slide {
		height: auto;
	}
}
.swiper-hero-prev,
.swiper-hero-next {
	position: static;
	width: 64px;
	height: 36px;
	border-radius: 100px;
	transform: unset;
	margin: 0 !important;
	display: flex !important;
	svg {
		width: 32px;
		height: 32px;
		min-width: 32px;
		min-height: 32px;
	}
}

// BREADCRUMBS
.breadcrumbs {
	margin-top: 24px;
	.container {
		overflow: auto;
		display: flex;
		align-items: center;
		gap: 8px;
	}
	&+* {
		margin-top: 40px !important;
	}
	@include r(768px) {
		margin-top: 16px;
		&+* {
			margin-top: 24px !important;
		}
	}
}
.breadcrumb {
	@extend .text, .text--light;
	transition: .3s ease;
	display: flex;
	align-items: center;
	gap: 8px;
	color: #6149AB66;
	white-space: nowrap;
	&:not(:last-child)::after {
		content: '';
		width: 24px;
		height: 1px;
		display: flex;
		background: #D9D9D9;
	}
	&:last-child {
		color: #6149AB;
	}
	@include hover {
		color: #6149AB;
	}
}
/* ... */

